# ResidualEngineAudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.MD  CONTRIBUTING.MD  DOCUMENTATION.MD  README.MD  SECURITY.MD  SUPPORT.MD  THIRD_PARTY_NOTICES.md
.cache/clangd/index/: main.c.640C37297677E4B6.idx  rv_crypto.c.6771DB2F4F7375A3.idx  rv_jitter.c.77DB1A7639056B64.idx  rv_netproto.c.CA6617B2AB5AA936.idx  rv_netproto.h.9864BF1D32DC3E83.idx  rv_opus.c.CE12E2E87D1122FC.idx  rv_opus_jitter.c.EE65E973D8CFBEFE.idx  rv_opus_jitter.h.F7C153D9D9287DCB.idx  rv_pcm_jitter.c.3FD9CFB8849639E3.idx  rv_pcm_jitter.h.C865C3B701DBD35E.idx  rv_platform_win32.c.116AB2BF38791A47.idx  rv_relay.h.C5129EB0F71C9761.idx  rv_relay_main.c.BD50149402EE682C.idx  rv_udp_win32.c.79E29691C6E2CCB2.idx  voice.c.8E0F33C3D221A7C1.idx  voice_demo.c.6C9798EE899A93DE.idx
.github/workflows/: release-unity-package.yml  windows-smoke.yml
examples/: voice_demo.c
include/residual_voice/: voice.h
scripts/: test-smoke-windows.ps1
src/: rv_dll_stub.c  rv_event_queue.h  rv_jitter.c  rv_netproto.c  rv_netproto.h  rv_opus.c  rv_opus.h  rv_opus_jitter.c  rv_opus_jitter.h  rv_pcm_jitter.c  rv_pcm_jitter.h  rv_relay.c  rv_relay.h  rv_relay_main.c  rv_shim_transport.c  rv_shim_transport.h  rv_shim_udp.c  rv_shim_udp.h  rv_transport.h  rv_transport_steam.h  rv_transport_udp.c  rv_transport_udp.h  rv_udp.h  rv_udp_win32.c  voice.c
tests/ResidualVoiceSmoke/: Program.cs  ResidualVoiceSmoke.csproj
unity/com.residual.voice/: CHANGELOG.MD  LICENSE.md  README.MD  package.json
unity/com.residual.voice/Runtime/: ResidualVoice.asmdef
unity/com.residual.voice/Runtime/Scripts/: IResidualVoiceTransport.cs  ResidualVoiceBasicLoopbackDemo.cs  ResidualVoiceClient.cs  ResidualVoiceConfig.cs  ResidualVoiceLocalPeerHub.cs  ResidualVoiceLocalPeerTranport.cs  ResidualVoiceLoopbackTransport.cs  ResidualVoiceMicInput.cs  ResidualVoiceNative.cs  ResidualVoicePcmUtility.cs  ResidualVoicePlaybackBuffer.cs  ResidualVoicePlaybackSource.cs  ResidualVoicePushToTalk.cs  ResidualVoiceRig.cs  ResidualVoiceTransportBinding.cs
unity/com.residual.voice/Samples~/BasicLoopback/: BasicLoopback.unity  README.MD  ResidualVoiceBasicLoopbackDemo.cs
unity/com.residual.voice/Samples~/Diagnostics/: ResidualAudioToneProbe.unity  ResidualVoicePlaybackProbe.cs
